[package]
name = "docgen"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool that automatically detects missing or outdated documentation in files and uses LLM APIs to generate or update docstrings"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rustpython-parser = "0.2.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
regex = "1.9"
colored = "2.0"
async-trait = "0.1"
# Language extension support
tree-sitter = "0.20.10"
tree-sitter-python = "0.20.4"
tree-sitter-rust = "0.20.4"
tree-sitter-javascript = "0.20.1"
tree-sitter-typescript = "0.20.3"
tempfile = "3.8.1"
